<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_MainTrialStep" Id="{654b1ecc-ab62-421b-ba2c-edfdf919b381}">
    <Declaration><![CDATA[TYPE ST_MainTrialStep :
STRUCT
	nTimestepLow : UDINT; 
	nTimestepHigh : UDINT; 
	rEncoderDegrees : REAL; 
	rEncoderRadians : REAL; 
	rCommandVoltage : REAL; 
	rCommandTorque : REAL; 
	rWallTorque : REAL; 
	rGripForce : REAL; 
	sSequenceStateString : T_MaxString; 
	nCurrentTestIndex : INT; 
	nTestIsLive : INT; 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>